# pca

./: .gitignore  README.md
ccc-spring-2024/: main.py  output.txt  runall.sh
grafuri/510C/: main.py  main2.py
grafuri/707B/: main.py
other/ecn2023/E/: CMakeLists.txt  F.in  F.out  build.sh  compile_commands.json  main.cpp  original.cpp  original_output.txt
other/ecn2023/E/.cache/clangd/index/: main.cpp.615B50F3A9D7A26F.idx
other/lazily_updated_segment_tree/: exemplu  exemplu.cpp  main.cpp  test.txt
other/segment_tree/: datorii.in  datorii.out  main.cpp
r1/A/: main.py
r1/B/: main.c  main.py
r1/D/: input.txt  main.cpp
r1/E/: main.py
r1/H/: main.c
r1/I/: main.c
r1/L/: main.py
r1/M/: main.py
r1/N/: main.py
r10/A/: main.py
r10/B/: main.py
r10/C/: main.py
r10/G/: main.py
r10/P/: CMakeLists.txt  main.cpp
r10/P/include/cdvii/: Bill.h  Fares.h  Record.h
r10/P/include/time/: DateTime.h  Duration.h  Time.h  TimeInterval.h
r10/P/src/cdvii/: Bill.cpp  Fares.cpp  Record.cpp
r10/P/src/time/: DateTime.cpp  Duration.cpp  Time.cpp
r13/: main.py
r2/D/: main.py
r2/J/: main.py
r2/N/: main.c
r2/P/: main.c
r2/Q/: compile_commands.json  main.cpp
r2/R/: input.txt  main.c
r3/A/: main.py
r3/B/: main.py
r3/C/: main.py
r3/D/: main.py
r3/E/: main.cpp
r3/F/: main.py
r3/P/: main.py
r4/A/: main.c
r4/B/: main.cpp
r4/C/: main.cpp
r4/D/: main.c
r4/E/: main.cpp
r4/F/: main.py
r4/G/: main.py
r4/H/: main.c
r4/I/: main.cpp
r4/J/: main.cpp
r4/K/: main.cpp
r4/L/: input.txt  (+1 more)
reply2024/: board.py  main.py  paths.txt  point.py  road.py  tile.py
stl2023/: main.cpp
stl2024/: CMakeLists.txt  main.cpp
stl2024/include/: Ingredient.h
stl2024/include/items/: CompositeItem.h  Item.h
stl2024/src/: Market.cpp
stl2024/src/items/: CompositeItem.cpp  Item.cpp
(+67 files in other folders)
